			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

22-Nov-2002
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).
Allow translation of About AppInfo section.
Bugfix: When using Metacity, some minimised windows weren't shown (reported by
	Alastair Porter).

21-Nov-2002
~~~~~~~~~~~
More tooltips for the Set Icon dialog.

20-Nov-2002
~~~~~~~~~~~
Use better wrapping system, if available (Richard Olsson).

15-Nov-2002
~~~~~~~~~~~
Removed ASCII sort option. Useless, and didn't work with UTF-8 anyway.

13-Nov-2002
~~~~~~~~~~~
New sorting system to cope with UTF-8 filenames.

12-Nov-2002
~~~~~~~~~~~
Use stdout, not stderr, for --help and --version, and use xmllint instead of
nsgmls to check for valid DocBook (Eric Gillespie).
Updated Chinese translation (babyfai Cheung).

11-Nov-2002
~~~~~~~~~~~
Added note about checking permissions to message complaining that the MIME
database can't be found (suggested by Keir Mierle).

07-Nov-2002
~~~~~~~~~~~
Set hint to make panels appear on all workspaces, and support metacity-style
iconified windows (reported by Alastair Porter; suggested fix by Laurent
Moussault).

05-Nov-2002
~~~~~~~~~~~
Added Bookmarks toolbar icon (Liav).

04-Nov-2002
~~~~~~~~~~~
Removed some unused code and fixed a possible race condition.

03-Nov-2002
~~~~~~~~~~~
Update error message to give correct version of MIME database (reported by
FD Cami).

31-Oct-2002
~~~~~~~~~~~
Make the Find and Permissions help windows look nicer.
Added support for shadowed labels on the pinboard (Andras Mohari).

29-Oct-2002
~~~~~~~~~~~
Stop Metacity from complaining that it can't decide whether the pinboard is
resizable or not (reported by Alastair Porter, solution suggested by 
Havoc Pennington).

28-Oct-2002
~~~~~~~~~~~
Make it more obvious that --new is only for debugging.
Added Norwegian translation (Sigve Indregard).

27-Oct-2002
~~~~~~~~~~~
Use our own stock icons for 'show hidden' and 'show details' toolbar buttons