@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+27-Nov-2002
+~~~~~~~~~~~
+Better positioning of bookmarks menu.
+
 22-Nov-2002
 ~~~~~~~~~~~
 Updated Spanish translation (Marcelo Ramos).
